services/downloads-standard/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-standard
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: sonarr-standard
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
